Реализация WebApi на ASP.NET Core.

--- a/WebApi/WebApplication02/appsettings.json
+++ b/WebApi/WebApplication02/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "Tokens": {
+    "DadataToken": "b0f8f14362f62c3a403bb384418df99cad95b1aa"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
