--- a/FacilitiesAPI/FacilitiesAPI/appsettings.json
+++ b/FacilitiesAPI/FacilitiesAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Pgsql": "Host=localhost:5412;Database=facilities_db;Username=postgres;Password=140208"
+  },
   "AllowedHosts": "*"
 }
